<resources>
    <string name="app_name">Aceros Ocotlán</string>
    <string name="action_settings">Usar nuevo codigo</string>
    <string name="title_activity_progreso_entrega">ProgresoEntregaActivity</string>
    <string name="title_activity_detalle_entrega">DetalleEntregaActivity</string>
    <string name="title_activity_detalle_entrega2">DetalleEntregaActivity2</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_codigo_ingreso">CodigoIngreso</string>
    <string name="title_activity_encuesta">EncuestaActivity</string>
    <string name="encuesta_activity_txt_encuesta">Encuesta Aceros Ocotlán</string>
    <string name="encuesta_activity_txt_pregunta1">Chofer</string>
    <string name="encuesta_activity_txt_pregunta2">Material</string>
    <string name="encuesta_activity_txt_pregunta3">Tiempo de entrega</string>
    <string name="encuesta_activity_txt_gracias">Gracias!</string>
    <string name="encuesta_activity_txt_descripcion">Nos gustaría saber qué opinas acerca de nuestros servicios</string>
    <string name="title_activity_encuesta_comentario">EncuestaComentario</string>
    <string name="encuesta_comentario_activity_txt_comentario">Si desea hacernos algún comentario o sugerencia para mejorar nuestro servicio se lo agradeceríamos mucho</string>
    <string name="encuesta_activity_txt_pregunta0">Vendedor</string>
    <string name="title_activity_ver_oferta">VerOferta</string>
    <string name="title_activity_error_conexion">ErrorConexionActivity</string>
    <string name="detalles_entrega_material">Material </string>
    <string name="detalles_entrega_cantidad">Cantidad </string>
    <string name="detalles_entrega_cantidad_kg">Cantidad en kg </string>
    <string name="codigo_progreso_edttxt_codigo_rastreo">Ingrese su código</string>
    <string name="btn_ver_detalle_progreso_entrega">Detalles de la Entrega</string>
    <string name="btn_enviar_factura_progreso_entrega">Envía tu factura</string>
    <string name="btn_nuevo_rastreo_progreso_entrega">Acuse de recibo</string>
    <string name="btn_ver_ofertas_progreso_entrega">Ofertas y remates</string>
    <string name="title_activity_firma_sistemas">FirmaSistemasActivity</string>
    <string name="btn_dialog_txt_nombre">Entendido</string>
    <string name="dialog_txt_descripcion">¿Le gustaría ver nuestras ofertas y remates antes de salir?</string>
    <string name="dialog_txt_titulo">Ofertas y Remates</string>
    <string name="txt_no">No</string>
    <string name="txt_si">Si</string>
    <string name="txt_ofertas">Ofertas</string>
    <string name="txt_entendido">Entendido</string>
    <string name="txt_cancelar">Cancelar</string>
    <string name="txt_salir">Salir</string>
    <string name="dialog_txt_titulo_factura">Enviar Factura</string>
    <string name="dialog_txt_descripcion_factura">Está a punto de enviar la factura de esta entrega a su correo registrado</string>
    <string name="dialog_btn_entendido_factura">Entendido</string>
    <string name="dialog_btn_cancelar_factura">Cancelar</string>
    <string name="dialog_txt_titulo_Llamada_correo">Solicitar Llamada</string>
    <string name="dialog_txt_descripcion_Llamada_correo">Al parecer no contamos con ningún correo suyo</string>
    <string name="dialog_txt_titulo_nuevo_rastreo">Nuevo Rastreo</string>
    <string name="dialog_txt_descripcion_nuevo_rastreo">Está a punto de volver a la pantalla de ingreso, ¿Desea continuar?</string>
    <string name="dialog_txt_descripcion_Llamada">¿Desea comunicarse con nosotros para más información?</string>
    <string name="txt_enviar">Enviar</string>
    <string name="detalles_entrega_txt_completo">COMPLETADO</string>
    <string name="detalles_entrega_txt_titulo">Detalles de la entrega</string>
    <string name="error_conexion_txt_titulo">Error de Conexión!</string>
    <string name="error_conexion_txt_descripcion">Al parecer hubo un problema al consultar la información</string>
    <string name="error_conexion_txt_instruccion">presiona el boton para recargar</string>

    <string name="firma_sistemas_puesto_1">Gerente de proyecto</string>
    <string name="firma_sistemas_txt_nombre1">Heber Carvajal</string>
    <string name="firma_sistemas_puesto_2">Desarrollador móvil</string>
    <string name="firma_sistemas_txt_nombre2">Saúl Delgado</string>
    <string name="firma_sistemas_puesto_3">Desarrollador Back-End</string>
    <string name="firma_sistemas_txt_nombre3">Irving Lemus</string>
    <string name="firma_sistemas_puesto_4">Ingeniería en infraestructura</string>
    <string name="firma_sistemas_txt_nombre4">Eduardo Reveles</string>
    <string name="firma_sistemas_puesto_5">Analista ERP</string>
    <string name="firma_sistemas_txt_nombre5">Javier Gutiérrez</string>
    <string name="splash_txt_bienvenidos">Bienvenido</string>
    <string name="cardview_ofertas">Valido hasta:</string>
    <string name="dialog_error_conexion_txt_titulo">¡Error de conexión!</string>
    <string name="dialog_error_conexion_txt_descripcion">Al parecer no se estableció la conexión correctamente, ¿Desea intentar de nuevo?</string>
    <string name="dialog_txt_titulo_sin_ofertas">No hay ofertas</string>
    <string name="dialog_txt_descripcion_sin_ofertas">Al parecer no hay ninguna oferta disponible en tu sucursal</string>
    <string name="appwidget_text">Entregas Aceros Ocotlán</string>
    <string name="add_widget">Add widget</string>
    <string name="txt_encabezado_menu">Opciones</string>
    <string name="title_activity_acuse_recibo">Acuse Recibo</string>
    <string name="dialog_txt_titulo_acuse_recibo">Acuse Recibo</string>
    <string name="dialog_txt_descripcion_acuse_recibo">¿Desea mandar el acuse de recibo a su correo?</string>
    <string name="encuesta_activity_txt_pregunta4">Califica esta aplicación</string>
    <string name="title_activity_estructurales">Estructurales</string>

    <!-- caLCULADORA-->
    <!-- UNIDADES DE MEDIDA -->
    <string name="lbp">lb/p</string>
    <string name="kgmetro">kg/m</string>
    <string name="lb">lb</string>
    <string name="kg">kg</string>
    <string name="gr">gr</string>
    <string name="tonelada">tonelada</string>
    <string name="oz">oz</string>
    <string name="in">in</string>
    <string name="m">m</string>


    /*PESO*/
    <string name="cm">cm</string>
    <string name="mm">mm</string>
    <string name="km">km</string>
    <string name="ft">ft</string>
    <string name="milla">milla</string>
    <string name="yd">yd</string>
    <string name="cm2">cm2</string>

    /*LONGITUD*/

    <string name="m2">m2</string>
    <string name="km2">km2</string>
    <string name="ha">ha</string>
    <string name="in2">in2</string>
    <string name="ft2">ft2</string>
    <string name="yd2">yd2</string>
    <string name="milla2">milla2</string>
    <string name="acre2">acre2</string>

    /*AREA*/

    <string name="mm2">mm2</string>
    <string name="F">°F</string>
    <string name="C">°C</string>
    <string name="m3">m3</string>
    <string name="lt">lt</string>
    <string name="in3">in3</string>
    <string name="ft3">ft3</string>
    <string name="yd3">yd3</string>
    <string name="gal">gal</string>
    <string name="cm3">cm3</string>

    /*TEMPERATURA*/

    <string name="Joule">Joule</string>
    <string name="kcal">kcal</string>

    /*VOLUMEN*/

    <string name="kgm">kg-m</string>
    <string name="kwhr">kw-hr</string>
    <string name="cal">cal</string>
    <string name="hphr">hp-hr</string>
    <string name="kw">kw</string>
    <string name="hp">hp</string>
    <string name="btuhr">btu/hr</string>


    /*CALOR*/

    <string name="watts">watts</string>
    <string name="kgcm2">kg/cm2</string>
    <string name="kgfmm2">kgf/mm2</string>
    <string name="mmHG">mm HG</string>
    <string name="Mpa">Mpa</string>
    <string name="Nmm2">N/mm2</string>

    /*POTENCIA*/

    <string name="psi">psi</string>
    <string name="Atm">Atm</string>
    <string name="icon">Spinner</string>
    <string name="none">none</string>

    /*PRESION*/

    <string name="peso">Peso</string>
    <string name="longitud">Longitud</string>
    <string name="area">Área</string>
    <string name="temperatura">Temperatura</string>
    <string name="presion">Presión</string>
    <string name="caloryenergia">Calor y temperatura</string>
    <string name="potencia">Potencia</string>


    <!-- ICONOS UNIDADES DE MEDIDA -->
    <string name="volumen">Volumen</string>
    <string name="title_activity_main_activity__m__categorias">MainActivity_M_Categorias</string>
    <string name="title_activity_main__m__productos">MainActivity_M_Productos</string>
    <string-array name="unidadesMedida">
        <item>Peso</item>
        <item>Longitud</item>
        <item>Area</item>
        <item>Temperatura</item>
        <item>Presión</item>
        <item>Volumen</item>
        <item>Calor y energía</item>
        <item>Potencia</item>
    </string-array>
    <string-array name="unidadesPeso">
        <item>kg/m</item>
        <item>lb/p</item>
        <item>lb</item>
        <item>kg</item>
        <item>gr</item>
        <item>tonelada</item>
        <item>oz</item>
    </string-array>
    <string-array name="unidadesLongitud">
        <item>in</item>
        <item>m</item>
        <item>cm</item>
        <item>mm</item>
        <item>km</item>
        <item>ft</item>
        <item>milla</item>
        <item>yd</item>
    </string-array>
    <string-array name="unidadesArea">
        <item>cm2</item>
        <item>m2</item>
        <item>km2</item>
        <item>ha</item>
        <item>in2</item>
        <item>ft2</item>
        <item>yd2</item>
        <item>milla2</item>
        <item>acre2</item>
        <item>mm2</item>
    </string-array>
    <string-array name="unidadesTemperatura">
        <item>°F</item>
        <item>°C</item>
    </string-array>
    <string-array name="unidadesVolumen">
        <item>m3</item>
        <item>lt</item>
        <item>in3</item>
        <item>ft3</item>
        <item>yd3</item>
        <item>gal</item>
        <item>cm3</item>
    </string-array>
    <string-array name="unidadesCalor">
        <item>Joule</item>
        <item>kcal</item>
        <item>kg-m</item>
        <item>kw-hr</item>
        <item>cal</item>
        <item>hp-hr</item>
    </string-array>
    <string-array name="unidadesPotencia">
        <item>kw</item>
        <item>hp</item>
        <item>btu/hr</item>
        <item>watts</item>
    </string-array>
    <string-array name="unidadesPresion">
        <item>kg/cm2</item>
        <item>kgf/mm2</item>
        <item>mm HG</item>
        <item>Mpa</item>
        <item>N/mm2</item>
        <item>psi</item>
        <item>Atm</item>
    </string-array>

</resources>
