<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:gravity="center">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@color/colorAzulGoogle">
    <ImageView
        android:src="@drawable/acerosocotlanlogooficial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:scaleType="center"
        android:contentDescription="@string/app_name"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/texto_blanco"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="15dp"
        android:text="@string/dialog_txt_titulo"/>
</FrameLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:orientation="vertical"
    android:gravity="center">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textSize="15sp"
        android:text="@string/dialog_txt_descripcion"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="end">
            <Button
                android:id="@+id/btn_dialog_no_ver_ofertas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_no"
                android:textStyle="bold"
                android:textColor="@color/texto_blanco"
                android:background="@drawable/boton_redondo"
                android:layout_marginEnd="16dp"/>
            <Button
                android:id="@+id/btn_dialog_si_ver_ofertas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_si"
                android:textStyle="bold"
                android:textColor="@color/texto_blanco"
                android:background="@drawable/boton_redondo"/>
        </LinearLayout>
        <ImageView
            android:id="@+id/dialog_img_estrella_oferta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/estrella"/>
    </FrameLayout>
</LinearLayout>
</LinearLayout>