<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Controlador.EncuestaActivity"
    tools:showIn="@layout/activity_encuesta">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imagen_fondo_detalles_encuesta"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/proceso5alternativo"
            android:scaleType="fitXY"/>
        <LinearLayout
            android:id="@+id/linear_layout_filtro_detalle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:alpha="0.4"
            android:visibility="visible"
            android:orientation="horizontal"></LinearLayout>
        <TextView
            android:id="@+id/estatus_detalle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/texto_blanco"
            android:textSize="30dp"
            android:textStyle="bold"
            android:text="COMPLETADO"
            android:gravity="center"
            android:visibility="invisible"
            android:layout_marginRight="5dp"/>
        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:cardview="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardview_detalle_entrega"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="50dp"
            android:layout_marginHorizontal="10dp"
            android:alpha="0.90"
            cardview:cardElevation="16dp"
            cardview:cardCornerRadius="10dp">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/text_encuesta_finalizada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/encuesta_activity_txt_gracias"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_marginVertical="30dp"
                    android:visibility="gone"
                    android:textColor="@color/primary_text"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/txt_descripcion_encuesta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/encuesta_activity_txt_descripcion"
                        android:textAlignment="center"
                        android:textSize="17sp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginVertical="10dp"
                        android:textColor="@color/secondary_text"
                        android:visibility="visible"/>
                    <GridLayout
                        android:id="@+id/gridlayout_encuesta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:rowCount="3"
                        android:columnCount="2">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/encuesta_activity_txt_pregunta0"
                            android:textSize="@dimen/tamano_txt_nombre"
                            android:textStyle="italic"
                            android:layout_gravity="center"
                            android:layout_marginRight="@dimen/distancia_txt_nombre"
                            android:textColor="@color/primary_text"
                            android:layout_marginBottom="5dp" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">
                            <ImageView
                                android:id="@+id/btn_feliz_encuesta_pregunta0"
                                android:layout_width="@dimen/tamano_img_respuesta_encuesta"
                                android:layout_height="@dimen/tamano_img_respuesta_encuesta"
                                android:layout_marginRight="@dimen/distancia_img_respuesta"
                                android:layout_marginBottom="@dimen/distancia_img_respuesta_bottom"
                                android:src="@drawable/feliz"/>
                            <ImageView
                                android:id="@+id/btn_contenta_encuesta_pregunta0"
                                android:layout_width="@dimen/tamano_img_respuesta_encuesta"
                                android:layout_height="@dimen/tamano_img_respuesta_encuesta"
                                android:layout_marginRight="@dimen/distancia_img_respuesta"
                                android:src="@drawable/sonriente"/>
                            <ImageView
                                android:id="@+id/btn_triste_encuesta_pregunta0"
                                android:layout_width="@dimen/tamano_img_respuesta_encuesta"
                                android:layout_height="@dimen/tamano_img_respuesta_encuesta"
                                android:src="@drawable/triste"/>
                            <ImageView
                                android:id="@+id/img_completado_encuesta_pregunta0"
                                android:layout_width="@dimen/tamano_img_completado_encuesta"
                                android:layout_height="@dimen/tamano_img_completado_encuesta"
                                android:layout_marginBottom="15dp"
                                android:visibility="gone"
                                android:src="@drawable/comprobado"/>
                        </LinearLayout>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/encuesta_activity_txt_pregunta1"
                            android:textSize="@dimen/tamano_txt_nombre"
                            android:textStyle="italic"
                            android:layout_gravity="center"
                            android:layout_marginRight="@dimen/distancia_txt_nombre"
                            android:textColor="@color/primary_text"
                            android:layout_marginBottom="5dp" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:visibility="visible">
                            <ImageView
                                android:id="@+id/btn_feliz_encuesta_pregunta1"
                                android:layout_width="@dimen/tamano_img_respuesta_encuesta"
                                android:layout_height="@dimen/tamano_img_respuesta_encuesta"
                                android:layout_marginRight="@dimen/distancia_img_respuesta"
                                android:layout_marginBottom="@dimen/distancia_img_respuesta_bottom"
                                android:src="@drawable/feliz"/>
                            <ImageView
                                android:id="@+id/btn_contenta_encuesta_pregunta1"
                                android:layout_width="@dimen/tamano_img_respuesta_encuesta"
                                android:layout_height="@dimen/tamano_img_respuesta_encuesta"
                                android:layout_marginRight="@dimen/distancia_img_respuesta"
                                android:src="@drawable/sonriente"/>
                            <ImageView
                                android:id="@+id/btn_triste_encuesta_pregunta1"
                                android:layout_width="@dimen/tamano_img_respuesta_encuesta"
                                android:layout_height="@dimen/tamano_img_respuesta_encuesta"
                                android:src="@drawable/triste"/>

                            <ImageView
                                android:id="@+id/img_completado_encuesta_pregunta1"
                                android:layout_width="@dimen/tamano_img_completado_encuesta"
                                android:layout_height="@dimen/tamano_img_completado_encuesta"
                                android:layout_marginBottom="15dp"
                                android:visibility="gone"
                                android:src="@drawable/comprobado"/>
                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/encuesta_activity_txt_pregunta2"
                            android:textSize="@dimen/tamano_txt_nombre"
                            android:textStyle="italic"
                            android:layout_gravity="center"
                            android:layout_marginRight="@dimen/distancia_txt_nombre"
                            android:textColor="@color/primary_text"
                            android:layout_marginBottom="5dp" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">
                            <ImageView
                                android:id="@+id/btn_feliz_encuesta_pregunta2"
                                android:layout_width="@dimen/tamano_img_respuesta_encuesta"
                                android:layout_height="@dimen/tamano_img_respuesta_encuesta"
                                android:layout_marginRight="@dimen/distancia_img_respuesta"
                                android:layout_marginBottom="@dimen/distancia_img_respuesta_bottom"
                                android:src="@drawable/feliz"/>
                            <ImageView
                                android:id="@+id/btn_contenta_encuesta_pregunta2"
                                android:layout_width="@dimen/tamano_img_respuesta_encuesta"
                                android:layout_height="@dimen/tamano_img_respuesta_encuesta"
                                android:layout_marginRight="@dimen/distancia_img_respuesta"
                                android:src="@drawable/sonriente"/>
                            <ImageView
                                android:id="@+id/btn_triste_encuesta_pregunta2"
                                android:layout_width="@dimen/tamano_img_respuesta_encuesta"
                                android:layout_height="@dimen/tamano_img_respuesta_encuesta"
                                android:src="@drawable/triste"/>

                            <ImageView
                                android:id="@+id/img_completado_encuesta_pregunta2"
                                android:layout_width="@dimen/tamano_img_completado_encuesta"
                                android:layout_height="@dimen/tamano_img_completado_encuesta"
                                android:layout_marginBottom="@dimen/distancia_img_respuesta_bottom"
                                android:visibility="gone"
                                android:src="@drawable/comprobado"/>
                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/encuesta_activity_txt_pregunta3"
                            android:textSize="@dimen/tamano_txt_nombre"
                            android:textStyle="italic"
                            android:layout_gravity="center"
                            android:layout_marginRight="@dimen/distancia_txt_nombre"
                            android:textColor="@color/primary_text"
                            android:layout_marginBottom="5dp" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">
                            <ImageView
                                android:id="@+id/btn_feliz_encuesta_pregunta3"
                                android:layout_width="@dimen/tamano_img_respuesta_encuesta"
                                android:layout_height="@dimen/tamano_img_respuesta_encuesta"
                                android:layout_marginRight="@dimen/distancia_img_respuesta"
                                android:layout_marginBottom="15dp"
                                android:src="@drawable/feliz"/>
                            <ImageView
                                android:id="@+id/btn_contenta_encuesta_pregunta3"
                                android:layout_width="@dimen/tamano_img_respuesta_encuesta"
                                android:layout_height="@dimen/tamano_img_respuesta_encuesta"
                                android:layout_marginRight="@dimen/distancia_img_respuesta"
                                android:src="@drawable/sonriente"/>
                            <ImageView
                                android:id="@+id/btn_triste_encuesta_pregunta3"
                                android:layout_width="@dimen/tamano_img_respuesta_encuesta"
                                android:layout_height="@dimen/tamano_img_respuesta_encuesta"
                                android:src="@drawable/triste"/>

                            <ImageView
                                android:id="@+id/img_completado_encuesta_pregunta3"
                                android:layout_width="@dimen/tamano_img_completado_encuesta"
                                android:layout_height="@dimen/tamano_img_completado_encuesta"
                                android:layout_marginBottom="15dp"
                                android:visibility="gone"
                                android:src="@drawable/comprobado"/>
                        </LinearLayout>

                    </GridLayout>
                </LinearLayout>
            </FrameLayout>
        </android.support.v7.widget.CardView>
    </FrameLayout>
</android.support.constraint.ConstraintLayout>